--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@quasar/extras": "^1.0.0",
         "core-js": "^3.6.5",
         "quasar": "^1.0.0",
+        "three": "^0.125.2",
         "vue": "^2.6.11",
         "vue-class-component": "^7.2.3",
         "vue-property-decorator": "^9.1.2"
