--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "eslint-plugin-vue": "^6.2.2",
         "license-checker": "^25.0.1",
         "node-sass": "^4.13.0",
+        "raw-loader": "^4.0.2",
         "sass-loader": "^8.0.2",
         "typescript": "^4.1.5",
         "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
