--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "three": "^0.125.2",
         "vue": "^2.6.11",
         "vue-class-component": "^7.2.3",
-        "vue-property-decorator": "^9.1.2"
+        "vue-property-decorator": "^9.1.2",
+        "vue-router": "^3.5.1"
     },
     "devDependencies": {
         "@types/electron-devtools-installer": "^2.2.0",
