--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@quasar/extras": "^1.0.0",
+        "adm-zip": "^0.5.3",
         "core-js": "^3.6.5",
         "quasar": "^1.0.0",
         "three": "^0.125.2",
@@ -26,6 +27,7 @@
         "vue-router": "^3.5.1"
     },
     "devDependencies": {
+        "@types/adm-zip": "^0.4.33",
         "@types/electron-devtools-installer": "^2.2.0",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
