--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "lint": "vue-cli-service lint",
         "licenses": "license-checker --production --excludePrivatePackages --json --unknown --customPath licenseChecker.json --out public/licenses.json",
         "postinstall": "electron-builder install-app-deps && yarn run licenses",
-        "postuninstall": "electron-builder install-app-deps && yarn run licenses"
+        "postuninstall": "electron-builder install-app-deps && yarn run licenses",
+        "semantic-release": "semantic-release"
     },
     "dependencies": {
         "@quasar/extras": "^1.0.0",
@@ -27,6 +28,8 @@
         "vue-router": "^3.5.1"
     },
     "devDependencies": {
+        "@semantic-release/changelog": "^5.0.1",
+        "@semantic-release/git": "^9.0.0",
         "@types/adm-zip": "^0.4.33",
         "@types/electron-devtools-installer": "^2.2.0",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -50,6 +53,7 @@
         "node-sass": "^4.13.0",
         "raw-loader": "^4.0.2",
         "sass-loader": "^8.0.2",
+        "semantic-release": "^17.4.2",
         "typescript": "^4.1.5",
         "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
         "vue-cli-plugin-quasar": "~3.0.1",
