--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "リソースパックのモデルを表示できるだけのツールです",
     "version": "0.1.0",
     "author": "MT224244",
-    "repository": "https://github.com/MT224244/MC-ResourcePack-Model-Viewer",
+    "repository": "https://github.com/MT224244/MC-ResourcePack-Model-Viewer.git",
     "main": "background.js",
     "license": "MIT",
     "private": true,
