--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "devDependencies": {
         "@semantic-release/changelog": "^5.0.1",
+        "@semantic-release/exec": "^5.0.0",
         "@semantic-release/git": "^9.0.0",
         "@types/adm-zip": "^0.4.33",
         "@types/electron-devtools-installer": "^2.2.0",
